# pixel-backup-manager

./: .gitignore  README.md  config.toml  pyproject.toml  requirements-dev.txt  requirements.txt
database/: db.py  models.py
models/: __init__.py  media_file.py
models/enums/: __init__.py  application_state.py  file_status.py  phone_state.py  transfer_result.py
