[project]
name = "pixel-backup-manager"
version = "0.1.0"
description = "Automated Google Pixel backup manager for unlimited Google Photos uploads."
authors = [
    { name = "Bernard" }
]
requires-python = ">=3.12"

##############################################################
# Black
##############################################################

[tool.black]
line-length = 100
target-version = ["py312"]

##############################################################
# Ruff
##############################################################

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501",
]

##############################################################
# MyPy
##############################################################

[tool.mypy]

python_version = "3.12"

warn_unused_configs = true

warn_return_any = true

warn_unused_ignores = true

warn_redundant_casts = true

warn_unreachable = true

strict_optional = true

disallow_untyped_defs = true

disallow_incomplete_defs = true

check_untyped_defs = true

no_implicit_optional = true

pretty = true

##############################################################
# PyTest
##############################################################

[tool.pytest.ini_options]

testpaths = [
    "tests"
]

python_files = [
    "test_*.py"
]

addopts = "-ra"

##############################################################
# Coverage (future)
##############################################################

[tool.coverage.run]

branch = true

source = [
    "core",
    "database",
    "events",
    "models",
    "util",
]